# Bong

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bong_blocks.json  docker-compose.test.yml  opencode.json
server/: .env.example  Cargo.toml  loot_pools.json  tsy_containers.json  tsy_drops.json  tsy_portals.json  tsy_spawn_pools.json  weather_profiles.json  zones.json  zones.json.example  zones.tsy.json  zones.worldview.example.json
server/assets/botany/: plants.toml
server/assets/combat/: juice_profiles.json
server/assets/config/: anticheat.toml
server/assets/insight/: generic_talents.json
server/assets/items/: anqi.toml  armor.toml  body_scrolls.toml  botany_v2.toml  core.toml  fauna.toml  forge.toml  herbs.toml  lingtian.toml  materials.toml  pills.toml  seeds.toml  shelflife_dead.toml  sword_materials.toml  tools.toml  tsy_keys.toml  tuike.toml  weapons.toml  woliu_scrolls.toml  zhenfa.toml
server/assets/loot/: zong_canjuan_beiling.json  zong_canjuan_bloodstream.json  zong_canjuan_chixia.json  zong_canjuan_nanyuan.json  zong_canjuan_taichu.json  zong_canjuan_xuanshui.json  zong_canjuan_youan.json
server/assets/zhenfa_hooks/: botany_v2_hooks.json  spiritwood_v1_hooks.json
server/crates/valence_generated_bong/: Cargo.toml  README.md
server/src/: main.rs  player.rs  world.rs  zhenfa_hooks.rs
server/src/alchemy/: auto_profile.rs  danxin.rs  furnace.rs  learned.rs  mod.rs  outcome.rs  pill.rs  processed_input.rs  quality.rs  recipe.rs  recipe_fragment.rs  residue.rs  resolver.rs  session.rs  side_effect_apply.rs  skill_hook.rs
server/src/armor/: mod.rs  mundane.rs
server/src/audio/: ambient.rs  implementation.rs  mod.rs
server/src/botany/: components.rs  ecology.rs  env_lock.rs  events.rs  harvest.rs  hazard.rs  integration.rs  lifecycle.rs  mod.rs  plant_kind.rs  registry.rs  skill_hook.rs
server/src/cmd/: mod.rs  ping.rs  registry_pin.rs
server/src/coffin/: mod.rs
server/src/combat/: anqi_v2.rs  anticheat.rs  armor.rs  armor_sync.rs  body_conditioning.rs  body_mass.rs  carrier.rs  components.rs  death_event_attacker_chain_test.rs  debug.rs  decay.rs  events.rs  foreign_qi_resistance.rs  jiemai.rs  knockback.rs  lifecycle.rs  mod.rs  needle.rs  player_attack.rs  projectile.rs  rat_bite.rs  raycast.rs  realm_gap.rs  resolve.rs  status.rs  style_telemetry.rs  sword_basics.rs  tests.rs  tuike.rs  weapon.rs  woliu.rs  yidao.rs  zhenmai_v2.rs
server/src/craft/: events.rs  mod.rs  recipe.rs  registry.rs  session.rs  unlock.rs
server/src/cultivation/: breakthrough.rs  breakthrough_cinematic.rs  burst_meridian.rs  character_lifecycle.rs  character_select.rs  color.rs  color_affinity.rs  components.rs  composure.rs  contamination.rs  dead_zone.rs  mod.rs  (+34 more)
(+3004 files in other folders)
